--- a/tictactoe.html
+++ b/tictactoe.html
@@ -6,7 +6,7 @@
 	position: relative;
 	margin-top: 4cm;
 	margin-bottom:100px;
-background-color:rgb(38, 216, 216);
+background-color:#00cc7a;
 }
 .block:before, .block:after {
 	content: '';
@@ -54,8 +54,8 @@ table,tr,td{
 }
         </style>
     </head>
-    <div class=block id="div" align=center style="border:3px solid red; padding:100px; margin-right:13cm; margin-left:13cm; background-color:rgb(38, 216, 216); color:red ">
-       <table style="background-color: rgb(38, 216, 216);">
+    <div class=block id="div" align=center style="border:3px solid red; padding:100px; margin-right:13cm; margin-left:13cm; background-color:#00cc7a; color:red ">
+       <table style="background-color: #00cc7a;">
         <tr>
             <td > <button id="0">  </button> </td>
             <td > <button id="1">  </button> </td>
