--- a/tictactoe.html
+++ b/tictactoe.html
@@ -38,7 +38,7 @@ background-color:#00cc7a;
 button{
     width:2cm;
     height:2cm;
-    background-color: rgb(38, 216, 216);
+    background-color: #00cc7a;
     border:none;
     outline:none;
     cursor:pointer;
