--- a/tictactoe.html
+++ b/tictactoe.html
@@ -54,6 +54,7 @@ table,tr,td{
 }
         </style>
     </head>
+	<body style="background-color: #e6e6e6;">
     <div class=block id="div" align=center style="border:3px solid red; padding:100px; margin-right:13cm; margin-left:13cm; background-color:#00cc7a; color:red ">
        <table style="background-color: #00cc7a;">
         <tr>
@@ -301,6 +302,7 @@ table,tr,td{
         })
       })
         </script>
+	</body>
 </html>
 
 
